Add social buttons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,33 +1,42 @@
-        <div class="row">
-            <div class="col-sm-2">
-                <ul class="list-unstyled">
-                    <li><strong>APPS</strong></li>
-                    <li><a href="">Alphabet</a></li>
-                    <li><a href="">Books</a></li>
-                    <li><a href="">Games</a></li>
-                    <li><a href="">Paint</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-2">
-                <ul class="list-unstyled">
-                    <li><strong>ABOUT</strong></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Press</a></li>
-                    <li><a href="">Team</a></li>
-                    <li><a href="">Jobs</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-2">
-                <ul class="list-unstyled">
-                    <li><strong>SUPPORT</strong></li>
-                    <li><a href="">Privacy Policy</a></li>
-                    <li><a href="">Terms of Use</a></li>
-                    <li><a href="">FAQ</a></li>
-                </ul>
-            </div>
-        </div>
+<div class="row">
+    <div class="col-sm-2">
+        <ul class="list-unstyled">
+            <li><strong>APPS</strong></li>
+            <li><a href="">Alphabet</a></li>
+            <li><a href="">Books</a></li>
+            <li><a href="">Games</a></li>
+            <li><a href="">Paint</a></li>
+        </ul>
+    </div>
+    <div class="col-sm-2">
+        <ul class="list-unstyled">
+            <li><strong>ABOUT</strong></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Press</a></li>
+            <li><a href="">Team</a></li>
+            <li><a href="">Jobs</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </div>
+    <div class="col-sm-2">
+        <ul class="list-unstyled">
+            <li><strong>SUPPORT</strong></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Terms of Use</a></li>
+            <li><a href="">FAQ</a></li>
+        </ul>
+    </div>
+</div>
 
-        <div class="modal-footer">
-            Copyright &copy; 2015 Amaltaas Team. All rights reserved.
-        </div>
+<div class="row">
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <div class="col-sm-6 addthis_native_toolbox"></div>
+    <div class="addthis_horizontal_follow_toolbox pull-right"></div>
+</div>
+
+<div class="modal-footer">
+    Copyright &copy; 2015 Amaltaas Team. All rights reserved.
+</div>
+
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-552f027e20d33478"
+        async="async"></script>
