--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,10 +8,10 @@
 <footer>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="" id="footerlink">Download</a></li>
-    <li><a href="/about.html">Learn More</a></li>
+    <li><a href="download.html" id="footerlink">Download</a></li>
+    <li><a href="about.html">Learn More</a></li>
     <li><a href="mailto:support@amaltaaskids.com">Get Support</a></li>
-    <li><a href="/privacy-policy.html">Privacy Policy</a></li>
+    <li><a href="privacy-policy.html">Privacy Policy</a></li>
   </ul>
   <br>
 
