--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a href="/" id="logo"><img src="files/amaltaas_logo.png" alt="Amaltaas Logo"></a>
     <ul>
-      <li><a href="" id="navlink">Download Now</a>
+      <li><a href="download.html" id="navlink">Download Now</a>
         <!-- <div class="dropdown">
           <div class="dropdown-menu">
             <ul>
@@ -13,8 +13,8 @@
           </div>
         </div> -->
       </li>
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/reviews.html">Reviews</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="reviews.html">Reviews</a></li>
       <li><a href="mailto:support@amaltaaskids.com">Support</a></li>
     </ul>
   </div>
