--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 </div>
 <footer>
   <ul>
-    <li><a href="/">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="download.html" id="footerlink">Download</a></li>
     <li><a href="about.html">Learn More</a></li>
     <li><a href="mailto:support@amaltaaskids.com">Get Support</a></li>
