--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="container">
-    <a href="/" id="logo"><img src="files/amaltaas_logo.png" alt="Amaltaas Logo"></a>
+    <a href="index.html" id="logo"><img src="files/amaltaas_logo.png" alt="Amaltaas Logo"></a>
     <ul>
       <li><a href="download.html" id="navlink">Download Now</a>
         <!-- <div class="dropdown">
